# osp

./: .bazelrc  .clang-format  .gitignore  CMakeLists.txt  README.md  WORKSPACE  build.sh
demo/pcre/: main.cpp  makefile  run.sh
demo/thrift/cpp/: build.sh  httpapi.thrift
demo/thrift/cpp/async_tutorial/: CppCobClient.cpp  CppCobServer.cpp  makefile  start_client_cob.sh  start_server_cob.sh
demo/thrift/cpp/sync_tutorial/: CppClient.cpp  CppServer.cpp  makefile  start_client.sh  start_server.sh
demo/thrift/node/: build.sh  client.js  http_client.js  server.js
demo/thrift/py/: build.sh  http_server.py  sync_client.py
docker/: Dockerfile
src/: CMakeLists.txt
src/base/: BUILD  logger_async.cc  logger_async.h  logging.cc  logging.h  logging_test.cc  macros.h  scoped_cleanup.h  scoped_cleanup_test.cc  spin_lock.h
src/base/test/: BUILD  test_main.cc  test_util.cc  test_util.h
src/common/rpc/grpc/: BUILD  greeter_client_test.cc  greeter_server_test.cc  helloworld_test.proto
src/leetcode/: BUILD  CMakeLists.txt  add_two_numbers.cc  longest_palindromic_substring.cc  longest_substring_without_repeating_characters.cc  two_sum.cc
tools/: check-dfs.sh  check-hbase.sh  evimdiff.sh  opsEnv.sh
